# danfimov_com

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  eleventy.config.js  package-lock.json  package.json  pyproject.toml  script.py  tailwind.config.js
src/: dependencies.py  main.py
src/api/: utils.py
src/api/pages/: main.py  posts.py  resume.py
src/articles/makefile/: index.md  index.yml
src/articles/pretty-django-admin/: index.md  index.yml
src/components/: CallToAction.astro  Footer.astro  Header.astro  Hero.astro  Navigation.astro
src/data/: footer.yml  global.yml  menu.yml  projects.yml
src/images/photo/: 1280.avif  1920.avif  2560.avif  640.avif  960.avif
src/includes/: menu.njk
src/layouts/: article.njk  page.njk
src/pages/: index.astro  mdx-page.mdx
src/pages/404/: index.njk
src/pages/about/: index.njk  index.yml
src/pages/articles/: index.njk  index.yml
src/pages/blog/: [...page].astro
src/pages/home/: index.njk  index.yml
src/pages/projects/: index.njk  index.yml
src/static/style/: tailwind_output.css
src/styles/: index.css
src/styles/blocks/about-education/: index.css
src/styles/blocks/about-section/: desktop.css  tablet.css
src/styles/blocks/about-section-list/: desktop.css  tablet.css
src/styles/blocks/about-work/: index.css
src/styles/blocks/intro/: base.css
src/styles/global/: fonts.css
src/templates/: base.html
src/templates/pages/: main.html  post.html  posts.html  resume.html
src/templates/posts/: pretty_django_admin.html
src/transforms/: images.js
(+2 files in other folders)
